# decompositions-project

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  axioms.py  cli.py  entry.py  examples.py  examples.txt  exists_constant.smt2  exp_monotone.smt2  exp_monotone.tptp  llm_client.py  log_monotone_exp.smt2  math_functions.py  mathematica_experiments.py  mathematica_export.py  pyproject.toml  series_summation.py  shared.py  tan_monotone.smt2  temporary.py  test.py  test1.py  test2.py  test3.py  universal_constant_correct.smt2  z3_experiments.py
decompositions_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
